# CppProjectTemplate

./: .clang-format  .clang-tidy  .codespellrc  .gersemirc  .gitignore  .valgrindrc  BUILDING.md  CMakeDevPresets.json  CMakeDeveloperPresets.json  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  HACKING.md  LICENSE  README.md  cmake-format.py  gcovr.cfg  iwyu.imp  vcpkg.json
.github/actions/report-coverage/: action.yml
.github/workflows/: ci.yml
BullseyeFireControlSystem/: CMakeLists.txt  Lib.cpp  Lib.hpp  Library.cpp  Main.cpp
CMake/: AddAndSetUpTargets.cmake  CCache.cmake  ClangTidyCache.cmake  Coverage.cmake  DeveloperMode.cmake  DoctestWithMain.cmake  Folders.cmake  Format.cmake  FormatCMake.cmake  FormatCpp.cmake  FormatTargets.cmake  GersemiStubs.cmake  InstallRules.cmake  InstallationRules.cmake  LanguageStandard.cmake  MarkdownCoverageReport.cmake  MetadataFromVcpkg.cmake  OptionsAndVariables.cmake  PackageConfig.cmake  Prelude.cmake  PropertiesForAllTargets.cmake  Spell.cmake  SpellTargets.cmake  Variables.cmake  VersionFromVcpkg.cmake
CppProjectTemplate/: CMakeLists.txt  Library.cpp  Library.hpp  Main.cpp  Person.cpp  Person.hpp  Square.hpp  Square.ipp
Tests/: BullseyeFireControlSystem.test.cpp  CMakeLists.txt  CppProjectTemplate.test.cpp  Library.test.cpp  Person.test.cpp  Square.test.cpp
cmake/: DevMode.cmake  DeveloperMode.cmake  DocsCi.cmake  Format.cmake  FormatCMake.cmake  FormatTargets.cmake  InstallationRules.cmake  LintTargets.cmake  SpellTargets.cmake  coverage.cmake  dev-mode.cmake  docs.cmake  lint.cmake  spell.cmake  variables.cmake
docs/: Doxyfile.in
source/: lib.cpp
test/: CMakeLists.txt
test/source/: BullseyeFireControlSystem_test.cpp
